Java-Controller-Model:  - Moved spawnpoint initialization into the match constructor
Java-Model:
 - Added turret drop & grab method and events

Java-Client-Server:
 - Added GameController as a listener for other clients' events